DROOLS-7318 Collection improvement for Indexing -This work adds FastUtils as an alternative collection implementation.It provides alternatives to the custom RBTree and HashMap used for indexing. What's nice about the work, is it paves the way to show how to easily add there collections if required in the future. After it's had some bake time, potentially the custom implementations could be deleted. ObjectHashMap and ObjectHashSet are also deleted and FastUtils used instead for TripleStrore and TruthMaintenance - JDK utils was not used, as they don't allow customer Hashers.
-Some generics improvements was also added.

-Lastly It caches the HashEntry, and reuses it for all the gets() and clones it when needed for the put.
For now the the custom heap priority queue remains, as the FastUtil one doesn't support removal yet.